@@ -124,6 +124,13 @@
       \item A \code{coef()} method for class \code{"maov"} has been
       added to allow \code{vcov()} to work with multivariate
       results. (\PR{16380})
+
+      \item \code{polym()} gains a \code{coefs = NULL} argument and
+      returns class \code{"poly"} just like \code{poly()} which gets a
+      new \code{simple=FALSE} option.  They now lead to correct
+      \code{predict()}ions, e.g., on subsets of the original data.
+      %% see https://stat.ethz.ch/pipermail/r-devel/2015-July/071532.html
+      %% possibly move to 3.2.1 patched
     }
   }
 }
